examples/test/testpolicy11354.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy11354
  namespace: namespace111
spec:
  podSelector:
    matchLabels:
      key14: value18
      key49: value26
      key28: value10
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key30: value27
          key38: value3
      podSelector:
        matchLabels:
          key0: value18
